syntax = "proto3";
package cosmos.auth.v1beta1;

import "google/protobuf/any.proto";

message BaseAccount {
    string address = 1;
    google.protobuf.Any pub_key = 2;
    uint64 account_number = 3;
    uint64 sequence = 4;
}

message AuthAccount {
    string type = 1;
    Value value = 2;
}

message Value {
    string account_number = 1;
    string address = 2;
    repeated Coin coins = 3;
    PublicKey public_key = 4;
    string sequence = 5;
}

message Coin {
    string denom = 1;
    string amount = 2;
}

message PublicKey {
    string type = 1;
    string value = 2;
}